--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://virendrashivsahu_db_user:3ugIlWNZPmaeqz4B@virendra.niokt6w.mongodb.net/?retryWrites=true&w=majority&appName=virendra
+MONGODB_URI=mongodb+srv://<db_username>:<yKBKHmjKZmaFyQSJ>@gdg.3tlcjgh.mongodb.net/?retryWrites=true&w=majority&appName=GDG
 JWT_SECRET=your_jwt_secret_key_here
